# orpheon-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  dev.docker-compose.yaml  flake.nix  gen_echo_proto.sh  gen_protos.sh  main.py  prod.docker-compose.yaml  pyproject.toml  run.sh
alembic/: env.py
app/: main.py  worker.py
app/config/: database.py  logging.py  ml_service.py  rabbit_mq.py  redis.py  s3.py  settings.py
app/dto/: audio_processing_dto.py  auth_dto.py  pagination_dto.py
app/infra/database/migrations/: 202507041407_create_users_table.py  202507201457_create_audio_processings_table.py  202509131705_create_feature_events_table.py
app/infra/external_services/: ml_service.py  rabbit_mq_service.py  redis_service.py  s3_service.py
app/model/: audio_processing_model.py  feature_event_model.py  user_model.py
app/repository/: audio_processing_repository.py  feature_event_repository.py  user_repository.py
app/service/: audio_processing_service.py  auth_service.py
proto/: echo.proto  ml.proto
