[project]
name = "orpheon-be"
version = "0.1.0"
description = "Orpheon Backend"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "ahargunyllib" }
]
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "ty>=0.0.1a13",
]

