[project]
name = "orpheon-be"
version = "0.1.0"
description = "Orpheon Backend"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "ahargunyllib" }
]
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.14",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
    "pyjwt>=2.10.1",
    "boto3>=1.39.4",
    "boto3-stubs[s3]>=1.39.4",
    "python-multipart>=0.0.20",
    "yt-dlp>=2025.6.30",
    "yt-dlp-types>=0.0.17",
    "redis[hiredis]>=6.2.0",
    "aio-pika>=9.5.5",
    "mutagen>=1.47.0",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "protobuf>=6.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["ARG", "FBT"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ml_pb2", "ml_pb2_grpc"]  # and any other generated modules
package-dir = {"" = "gen"}
